<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_text_enter_title">Enter Title</string>
    <string name="edit_text_enter_date">Enter Date</string>
    <string name="edit_text_enter_note">Write Your Note</string>
    <string name="rv_notes_title">Notes Title</string>
    <string name="rv_notes_date">Notes Date</string>
    <string name="rv_notes_content">Notes Content</string>
    <string name="button_save_note">Save Note</string>
    <string name="button_show_note">Show Notes</string>
    <string name="action_bar_all">All Notes</string>
    <string name="description">Null</string>
</resources>
