<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/common_design"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="serif"
        android:hint="@string/rv_notes_title"
        android:paddingLeft="2dp"
        android:paddingTop="4dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:textColor="#37474F"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="10dp"
        android:layout_weight="5"
        android:gravity="start"
        android:hint="@string/rv_notes_date"
        android:padding="2dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_dialog_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:hint="@string/rv_notes_content"
        android:maxLines="10"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textSize="17sp" />

</LinearLayout>
