<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/common_design"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="serif"
        android:hint="@string/rv_notes_title"
        android:paddingLeft="2dp"
        android:paddingTop="4dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:textColor="#37474F"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:hint="@string/rv_notes_content"
        android:maxLines="2"
        android:minLines="2"
        android:padding="5dp"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:gravity="start"
            android:hint="@string/rv_notes_date"
            android:padding="2dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/image_button_see_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/see_icon"
            android:backgroundTint="#0277BD"
            android:contentDescription="@string/description" />

        <ImageButton
            android:id="@+id/image_button_edit_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_icon"
            android:backgroundTint="#2E7D32"
            android:contentDescription="@string/description" />

        <ImageButton
            android:id="@+id/image_button_delete_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/del_icon"
            android:backgroundTint="#C62828"
            android:clickable="true"
            android:contentDescription="@string/description"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>